--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,7 @@
 .navigation {
-    
+    backface-visibility: hidden;
+    font-size: $nav-fontsize;
+
     &__list {
         position: absolute;
         top: 0;
@@ -13,42 +15,93 @@
     }
 
     &__item {
-        float: left;
-        width: calc((100% / 3) - #{$gutter-horizontal});
+        // width: calc((100% / 3) - #{$gutter-horizontal});
+        padding: 30px;
+        display: inline-block;
+        transition: all .4s; 
+
+        &:hover {
+            -webkit-transform: translateY(-1rem);
+            transform: translateY(-1rem);
+        }
+
+        &:hover .navigation__link{
+            background-position: 100%;
+        }
+
+        &:hover .navigation__link::after{
+            content: '';
+            display: block;
+            margin-top: 10px;
+            height: 3px;
+            width: 0;
+            background: $color-line;
+            transition: width .3s !important;
+        }
+
+        &:hover .navigation__link:hover::after {
+            width: 100%;
+        }
     }
     
     &__link {
-        font-size: $nav-fontsize;
         color: $color-text;
+        text-decoration: none;
+        
+
         &:link, 
         &:visited {
-            display: inline-block;
-            text-decoration: none;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-secondary-highlight 50%);
             background-size: 250%;
-            transition: all .3s;
+            transition: all .4s;
         }
 
         &:hover,
         &:active {
             background-position: 100%;
+            -webkit-transform: translateY(-1rem);
             transform: translateY(-1rem);
         }
 
         &--active {
-            padding-bottom: 2px;
-            border-bottom: 2px solid $color-line;
+            background-color: $color-secondary-highlight;
+        }
 
-            &:hover,
-            &:active {
-                border-bottom: none;
-            }
+        &--active::after {
+            content: '';
+            display: block;
+            margin-top: 10px;
+            height: 3px;
+            background: $color-line;
         }
 
     }
 
+
+    // &__link--active:hover &__span:hover {
+    //     padding-bottom: 0;
+    //     border-bottom: none;
+    // }  
+
+    // &__link--active &__span {
+    //     display: inherit;
+    //     height: inherit;
+    //     line-height: inherit;
+    //     position: inherit;
+    // } 
+
+    // &__span {
+    //     display: table;
+    //     height: 0px;
+    //     line-height: 0;
+    //     position: absolute;
+    // }
+
+    // &__link:hover &__span {
+    //     @include border;
+    // }
+
     .logo {
-        font-size: $nav-fontsize;
         float: right;
         & a {
             text-decoration: none;
