--- a/css/style.css
+++ b/css/style.css
@@ -79,18 +79,21 @@ body {
       display: block;
       margin-top: 10px;
       height: 3px;
-      width: 0;
       background: #6871ff;
-      transition: width .3s !important; }
-    .navigation__item:hover .navigation__link:hover::after {
-      width: 100%; }
+      animation: customwidth .5s; }
+
+@keyframes customwidth {
+  0% {
+    width: 0%; }
+  100% {
+    width: 100%; } }
   .navigation__link {
     color: #feffff;
     text-decoration: none; }
     .navigation__link:link, .navigation__link:visited {
       background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #c930c7 50%);
       background-size: 250%;
-      transition: all .4s; }
+      transition: all .5s; }
     .navigation__link:hover, .navigation__link:active {
       background-position: 100%;
       -webkit-transform: translateY(-1rem);
