First pass on tree

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-text: #feffff;
 $color-secondary-text: #c7c7c7;
 $color-highlight: #00C5C7;
 $color-secondary-highlight: #c930c7;
+$color-tertiary-highlight: #6484a8;
 $color-line: #6871ff;
 $color-secondary-line: #00c200;
 
@@ -22,3 +23,4 @@ $gutter-horizontal: 4rem;
 $nav-fontsize: 2rem;
 
 $heading-fontsize-main: 4rem; 
+$heading-fontsize-secondary: 3rem; 
