--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,11 @@
 .header {
-    height: 95vh;
+    min-height: 95vh;
 
     &__text-box {
         position: absolute;
         top: 40%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -40%);
         text-align: left;
     }
 }
