--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,5 +4,9 @@
 @import "base/base";
 @import "base/typography";
 
+@import "components/tree";
+
 @import "layout/header";
 @import "layout/navigation";
+
+@import "pages/home";
