--- a/sass/components/_tree.scss
+++ b/sass/components/_tree.scss
@@ -16,18 +16,11 @@
         color: $color-secondary-text;
     }
 
-    &__text--citi {
-        background-color: $color-tertiary-highlight;
-        color: $color-secondary-text;
-    }
-
     &__subtree {
 
         &--expand {
             opacity: 1;
             & .tree__branch--vertical{
-                @include tree-branch-line(3px, 0px);
-                @include increase-height-animation(5rem);
                 animation-delay: 2s;
             }
 
@@ -36,60 +29,71 @@
             }
 
             & .tree__branch--vertical:after {
-                @include increase-height-animation(5rem);
                 @include tree-branch-line(3px, 0px);
+                @include increase-height-animation(5rem);
                 display: inline;
                 animation-delay: 2s;
                 position: absolute;
                 content: '';
-                border-right: 3px solid $color-secondary-line;
                 margin-left: 5rem;
             }
 
             & .tree__branch--horizontal {
-                animation: increase-width 2s;
                 @include tree-branch-line(0px, 3px);
-                display: flex;
-                align-items: center;
+                @include increase-width-animation;
                 animation-delay: 3s;
                 margin-left: 5rem;
             }
 
             & .tree__text {
                 @include fade-in;
-                animation-delay: 3s;
             }
         }
 
         &--collapse {
             opacity: 0;
             height: 0;
-            transition: all 1s;
         }
+    }
+
+    &__subtree--collapse + &__branch--vertical {
+        @keyframes move-up-illusion{
+            0% {
+                height: 12rem;
+            }
+
+            100% {
+                height: 6rem;
+            }
+        }
+        animation: move-up-illusion 2s;
+        animation-fill-mode: forwards;
     }
 
     & li {
         list-style: none;
     }
  
-    @keyframes increase-width{
-        100% {
-            width: $branch-width;
-        }
-    }
-
     &__branch{
         &--vertical {
             @include tree-branch-line(3px, 0px);
-            animation: increase-height 2s;
+            @include increase-height-animation(5rem);
         }
 
         &--horizontal {
             @include tree-branch-line(0px, 3px);
-            display: flex;
-            align-items: center;
-            animation: increase-width 2s;
+            @include increase-width-animation;
             animation-delay: 1s;
         }
     }
 }
+
+#tree__text--citi {
+    background-color: $color-tertiary-highlight;
+    color: $color-secondary-text;
+}
+
+// 1. fix animation when expand second time - Done
+// 2. change tree text to selected 
+// 3. animate collapse - Done
+// 4. make animation only happen when scroll
