Completed tree animation

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,5 +24,6 @@ $nav-fontsize: 2rem;
 
 $heading-fontsize-main: 4rem; 
 $heading-fontsize-secondary: 3rem; 
+$heading-fontsize-tertiary: 2.5rem;
 
 $branch-width: 3rem;
