--- a/sass/components/_tree.scss
+++ b/sass/components/_tree.scss
@@ -1,89 +1,97 @@
-.tree {
+.tree { // important to have the padding even when not visible or else rendering will be wrong
     line-height: 2rem;
     font-size: 3rem;
-    margin-left: 8rem;
+    padding-left: 10rem;
     color: $color-secondary-line;
 
-    &__text {
-        cursor: pointer;
-        font-size: 2.5rem;
-        margin-left: $branch-width + .5rem;
-        padding: 5px;
+    & .tree__branch--vertical:after {
+        display: inline;
+        position: absolute;
+        content: '';
+        margin-left: 5rem;
     }
+}
 
-    &__text:active {
-        background-color: $color-tertiary-highlight;
-        color: $color-secondary-text;
-    }
+.is-visible {
+    .tree {
+        &__text {
+            cursor: pointer;
+            font-size: 2.5rem;
+            margin-left: $branch-width + .5rem;
+            padding: 5px;
+            color: $color-secondary-line;
+        }
 
-    &__subtree {
+        &__text:active {
+            background-color: $color-tertiary-highlight;
+            color: $color-secondary-text;
+        }
 
-        &--expand {
-            opacity: 1;
-            & .tree__branch--vertical{
-                animation-delay: 2s;
+        &__subtree {
+
+            &--expand {
+                opacity: 1;
+                & .tree__branch--vertical{
+                    animation-delay: 2s;
+                }
+
+                & .tree__branch--vertical:first-child:after {
+                    margin-top: 20px;
+                }
+
+                & .tree__branch--vertical:after {
+                    @include tree-branch-line(3px, 0px);
+                    @include increase-height-animation(5rem);
+                    animation-delay: 2s;
+                }
+
+                & .tree__branch--horizontal {
+                    @include tree-branch-line(0px, 3px);
+                    @include increase-width-animation;
+                    animation-delay: 3s;
+                    margin-left: 5rem;
+                }
+
+                & .tree__text {
+                    @include fade-in;
+                }
             }
 
-            & .tree__branch--vertical:first-child:after {
-                margin-top: 20px;
+            &--collapse {
+                opacity: 0;
+                height: 0;
             }
+        }
 
-            & .tree__branch--vertical:after {
+        &__subtree--collapse + .tree__branch--vertical {
+            @keyframes move-up-illusion{
+                0% {
+                    height: 12rem;
+                }
+
+                100% {
+                    height: 6rem;
+                }
+            }
+            animation: move-up-illusion 2s;
+            animation-fill-mode: forwards;
+        }
+
+        & li {
+            list-style: none;
+        }
+    
+        &__branch{
+            &--vertical {
                 @include tree-branch-line(3px, 0px);
                 @include increase-height-animation(5rem);
-                display: inline;
-                animation-delay: 2s;
-                position: absolute;
-                content: '';
-                margin-left: 5rem;
             }
 
-            & .tree__branch--horizontal {
+            &--horizontal {
                 @include tree-branch-line(0px, 3px);
                 @include increase-width-animation;
-                animation-delay: 3s;
-                margin-left: 5rem;
+                animation-delay: 1s;
             }
-
-            & .tree__text {
-                @include fade-in;
-            }
-        }
-
-        &--collapse {
-            opacity: 0;
-            height: 0;
-        }
-    }
-
-    &__subtree--collapse + &__branch--vertical {
-        @keyframes move-up-illusion{
-            0% {
-                height: 12rem;
-            }
-
-            100% {
-                height: 6rem;
-            }
-        }
-        animation: move-up-illusion 2s;
-        animation-fill-mode: forwards;
-    }
-
-    & li {
-        list-style: none;
-    }
- 
-    &__branch{
-        &--vertical {
-            @include tree-branch-line(3px, 0px);
-            @include increase-height-animation(5rem);
-        }
-
-        &--horizontal {
-            @include tree-branch-line(0px, 3px);
-            @include increase-width-animation;
-            animation-delay: 1s;
         }
     }
 }
@@ -96,4 +104,4 @@
 // 1. fix animation when expand second time - Done
 // 2. change tree text to selected 
 // 3. animate collapse - Done
-// 4. make animation only happen when scroll
+// 4. make animation only happen when scroll - Done
