--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -25,5 +25,7 @@ $nav-fontsize: 2rem;
 $heading-fontsize-main: 4rem; 
 $heading-fontsize-secondary: 3rem; 
 $heading-fontsize-tertiary: 2.5rem;
+$heading-fontsize-quarternary: 1.5rem;
 
 $branch-width: 3rem;
+$branch-height: 5rem;
