--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,17 +58,21 @@ body {
     }
 }
 
-.work-experience {
-    &--title {
-        font-family: 'Space Mono', monospace;
-        font-size: $heading-fontsize-tertiary;
-    }
-}
-
 .heading-secondary {
     display: block;
     font-size: $heading-fontsize-secondary;
 }
+
+.heading-tertiary {
+    font-family: 'Space Mono', monospace;
+    font-size: $heading-fontsize-tertiary;
+}
+
+.heading-quarternary {
+    font-family: 'Space Mono', monospace;
+    font-size: $heading-fontsize-quarternary;
+}
+
 
 .heading-arrow {
     font-size: $heading-fontsize-main;
