--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,6 +17,12 @@
         }
     }
 
+    .sky {
+        .work-experience--title {
+            width: 60rem;
+        }
+    }
+
     .is-visible {
         .work-experience {
             &--details {
