--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -21,6 +21,8 @@ $color-secondary-line: #00c200;
 
 $gutter-horizontal: 4rem;
 $nav-fontsize: 2rem;
+$nav-item-padding: 3rem;
+$nav-margin-top: 2rem;
 
 $heading-fontsize-main: 4rem; 
 $heading-fontsize-secondary: 3rem; 
