--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,22 @@
 .header {
-    min-height: 95vh;
+    min-height: 80vh;
 
     &__text-box {
+
+        @include respond(tab-port) {
+            position: relative;
+            transform: translate(0%, 0%);
+            padding: 2.5rem;
+            left: 0;
+        }
+
+        @include respond(phone) {
+            position: relative;
+            transform: translate(0%, 15%);
+            padding: 0rem;
+            left: 0;
+        }
+
         position: absolute;
         top: 40%;
         left: 50%;
