Fixed console scoping errors and added navigation

--- a/personal-portfolio/src/app/navigation/navigation.component.scss
+++ b/personal-portfolio/src/app/navigation/navigation.component.scss
@@ -84,7 +84,7 @@
 
     .logo {
         float: right;
-        margin-top: $nav-margin-top;
+        // margin-top: $nav-margin-top;
         & a {
             text-decoration: none;
             color: $color-text;
