--- a/personal-portfolio/src/app/navigation/navigation.component.html
+++ b/personal-portfolio/src/app/navigation/navigation.component.html
@@ -1,10 +1,10 @@
 <div class="navigation">
     <ul class="navigation__list">
         <li class="navigation__item">
-            <a href="#" class="navigation__link navigation__link--active">Work</a>
+            <a routerLink="/work" routerLinkActive="active" class="navigation__link navigation__link--active">Work</a>
         </li>
         <li class="navigation__item">
-            <a href="#" class="navigation__link">Art</a>
+            <a routerLink="/art" routerLinkActive="active" class="navigation__link">Art</a>
         </li>
         <li class="navigation__item">
             <a href="#" class="navigation__link">Contact</a>
@@ -14,3 +14,5 @@
         <a href="#">Serena Chan</a>
     </div>
 </div>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
