Started adding images

--- a/personal-portfolio/src/app/art/art.component.html
+++ b/personal-portfolio/src/app/art/art.component.html
@@ -1,1 +1,9 @@
-<p>art works!</p>
+<!-- <div class="art"></div> -->
+<div class="container">
+  <div class="artwork" style="flex-grow: 2">
+    <img src="../../assets/insomnia.jpg">
+  </div>
+  <div class="artwork">
+    <img src="../../assets/still.jpg">
+  </div>
+</div>
